# AquaOS

./: .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  aqua.sh  image.sh  limine.cfg  limine.conf
kernel/: GNUmakefile  linker.ld
kernel/bin-x86_64/: kernel
kernel/src/: font.h  krnlfont.h  logo.h  main.c  main.cpp
limine/: limine
snowboot/efi/: CMakeLists.txt  Makefile  acpi.c  elf.c  filesystem.c  get-deps  log.c  memory_services.c  print.c  snowboot.c
snowboot/efi/inc/: disk_services.h  globals.h  log.h  memory_services.h  print.h  video_services.h
snowboot/efi/inc/boot_protocol/: snowboot.h
src/boot/bios/: LWDBOOT.s  LWDLOADER.s
src/boot/efi/: BOOTX64.EFI  CMakeLists.txt  LWDBOOT.c  Makefile  cmake_install.cmake  disk_services.c  memory_services.c  snowboot.c  video_services.c  virtual_memory.c
src/boot/efi/bootsrc/: AQUABOOT.c  AQUABOOT.cpp  AquaBoot.cpp  LWDBOOT.c  bootgraphics.cpp  pmm.cpp  print.c  print.cpp  vmm.cpp
src/boot/efi/bootsrc/bootinc/: AquaBoot.h  bootgraphics.h  pmm.h  print.h  vmm.h
src/boot/efi/bootsrc/icon/: logo.h
src/boot/efi/bootsrc/inc/: acpi_tables.h
src/boot/efi/inc/: acpi.h  elf.h  memory_services.h  virtual_memory.h
src/boot/efi/inc/boot_protocol/: snowboot.h
src/boot/efi/inc/fs/: filesystem.h
src/boot/efi/src/: AquaBoot.c  acpi.c  disk_services.c  elf.c  filesystem.c  log.c  memory_services.c  paging.S  paging.asm  video_services.c  virtual_memory.c
src/boot/efi/src/inc/: acpi.h  aquaboot.h  disk_services.h  elf.h  log.h  logo.h  memory_services.h  page_table.h  print.h  video_services.h  virtual_memory.h
src/boot/efi/src/inc/boot_protocol/: aquaboot.h
src/boot/efi/src/inc/fs/: ext2.h  filesystem.h
src/kernel/: AquaKernel.cpp  AquaKrnl.cpp  CMakeLists.txt  LWDKRNL.cpp  kernel.cpp  linker.ld
src/kernel/inc/: kprintf.hpp  logo.hpp  terminal.hpp
src/kernel/inc/mm/: pmm.hpp  vmm.hpp
src/kernel/io/: kprintf.cpp
src/kernel/misc/: mem.cpp
src/kernel/mm/: pmm.cpp
src/kernel/src/: AquaKernel.cpp  exception.cpp  gdt.asm  kprint.cpp  print.cpp  terminal.cpp  tinyubsan.cpp
src/kernel/src/inc/: gdt.hpp  krnl_colors.hpp  krnl_font.hpp  krpint.hpp  print.hpp  terminal.hpp
src/kernel/src/inc/mm/: pmm.hpp  vmm.hpp
src/kernel/src/inc/sys/: gdt.hpp  idt.hpp
src/kernel/src/mm/: pmm.cpp  vmm.cpp
src/kernel/src/sys/: gdt.cpp  idt.asm  idt.cpp  interrupts.cpp  isr.asm
src/kernel/sys/: gdt.asm  gdt.cpp  idt.cpp  interrupts.cpp  isr.asm
toolchain/: toolchain.cmake
yuki/: CMakeLists.txt  get-deps  kernel.cpp  limine.conf  linker.ld
yuki/inc/: mem.hpp  terminal.hpp
yuki/inc/io/: serial.hpp  terminal.hpp
yuki/inc/klibc/: string.hpp
yuki/inc/mm/: pmm.hpp  vmm.hpp
yuki/inc/sys/: gdt.hpp  idt.hpp
yuki/io/: kprintf.cpp  serial.cpp  terminal.cpp
yuki/klib/: string.cpp
yuki/klibc/: string.cpp
yuki/misc/: tinyubsan.cpp
yuki/mm/: pmm.cpp  vmm.cpp
yuki/sys/: gdt.asm  gdt.cpp  idt.asm  idt.cpp  interrupts.cpp  isr.asm
